# Projet_MaintenancePredictive

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  changes.md  docker-compose.yml  dvc.yaml  mlflow.db  pyproject.toml  requirements.txt  run.sh
.claude/: settings.json
.claude/agents/: data-validator.md  feature-engineer.md  leakage-detector.md  ml-trainer.md  notebook-analyst.md
.claude/commands/: lint.md  stack.md  test.md  train.md
.claude/hooks/: PostToolUse.sh  SessionStart.sh
.claude/rules/: code-style.md  graphify.md  ml-constraints.md
.claude/skills/: check-leakage.md  eda.md  evaluate-model.md  new-feature.md
.github/workflows/: ci.yml
app/: main.py
app/templates/: index.html
docs/: preparation_oral.txt
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: maintenance_api.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
notebooks/: 01_exploration.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_evaluation.ipynb
src/data/: load.py  split.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  train.py
src/utils/: config.py
tests/: test_api.py  test_data.py  test_features.py  test_model.py
